# CUE4Parse

./: .gitmodules
CUE4Parse/: CUE4Parse.csproj
CUE4Parse-Conversion/Animations/: AnimConverter.cs
CUE4Parse-Conversion/Meshes/: MeshConverter.cs
CUE4Parse-Natives/: CMakeLists.txt
CUE4Parse-Natives/ACL/: ACL.cpp
CUE4Parse-Natives/ACL/includes/: ACLDecompress.h  ACLFramework.h
CUE4Parse/ACL/: CompressedClip.cs  CompressedHeaders.cs
CUE4Parse/FileProvider/: AbstractFileProvider.cs
CUE4Parse/GameTypes/HL/Objects/: AblAbilityBlueprintGeneratedClass.cs
CUE4Parse/UE4/Assets/: AbstractUePackage.cs  IoPackage.cs
CUE4Parse/UE4/Assets/Exports/: UObject.cs
CUE4Parse/UE4/Assets/Exports/BuildData/: UMapBuildDataRegistry.cs
CUE4Parse/UE4/Assets/Exports/Component/: UActorComponent.cs  UBillboardComponent.cs  UBrushComponent.cs  USceneComponent.cs
CUE4Parse/UE4/Assets/Exports/Material/: CMaterialParams2.cs  MaterialResourceTypes.cs  UMaterialInstanceConstant.cs  UMaterialInterface.cs
CUE4Parse/UE4/Assets/Exports/SkeletalMesh/: FSkinWeightInfo.cs  FSkinWeightVertexBuffer.cs
CUE4Parse/UE4/Assets/Exports/Texture/: FTexture2DMipMap.cs  FTexturePlatformData.cs
CUE4Parse/UE4/Assets/Objects/: FByteBulkData.cs
CUE4Parse/UE4/Assets/Objects/Properties/: ByteProperty.cs  FPropertyTagType.cs
CUE4Parse/UE4/Assets/Readers/: FAssetArchive.cs
CUE4Parse/UE4/Objects/Engine/: UBlueprintGeneratedClass.cs
CUE4Parse/UE4/Objects/UObject/: FSoftObjectPath.cs
CUE4Parse/UE4/Readers/: FMemoryImageArchive.cs
(+7 files in other folders)
